Archive2/25/503e99f82bc265/output
+ g++-4.8 -std=c++1y -O2 -Wall -pedantic -pthread main.cpp
main.cpp:1:1: error: ‘SeqNum’ does not name a type
 SeqNum
 ^
main.cpp:72:2: warning: extra ‘;’ [-Wpedantic]
 };
  ^
+ echo 1
1
